crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_single_pk_snapshot@basic_single_pk_Jpa.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "users")
public class Users {

    @Id
    @Column(name = "id")
    private Integer id;

    @Column(name = "display_name", columnDefinition = "TEXT")
    private String displayName;

    protected Users() {
    }
}
