crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_single_pk_snapshot@basic_single_pk_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 66
expression: rendered
---
model Users {
  id Int @id
  display_name String?

  @@map("users")
}
