crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_single_pk_snapshot@basic_single_pk_SeaOrm.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
use sea_orm::entity::prelude::*;

#[sea_orm::model]
#[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel)]
#[sea_orm(table_name = "users")]
pub struct Model {
    #[sea_orm(primary_key)]
    pub id: i32,
    pub display_name: Option<String>,
}

vespera::schema_type!(Schema from Model, name = "UsersSchema");
impl ActiveModelBehavior for ActiveModel {}
