crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_table_with_description_snapshot@basic_table_with_description_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Users(models.Model):
    """User accounts table"""

    # Primary key
    id = models.AutoField(primary_key=True)
    # User email address
    email = models.TextField(unique=True)
    name = models.TextField(null=True, blank=True)

    class Meta:
        managed = False
        db_table = "users"
