crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_table_with_description_snapshot@basic_table_with_description_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
// User accounts table
export const users = pgTable("users", {
  // Primary key
  id: integer("id").primaryKey().generatedByDefaultAsIdentity(),
  // User email address
  email: text("email").notNull(),
  name: text("name"),
}, (t) => [
  uniqueIndex("uq_users__email").on(t.email),
]);
