crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_table_with_description_snapshot@basic_table_with_description_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

// User accounts table
type Users struct {
	// Primary key
	ID int32 `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
	// User email address
	Email string  `gorm:"column:email;not null;unique;type:text" json:"email"`
	Name  *string `gorm:"column:name;type:text" json:"name"`
}

func (Users) TableName() string { return "users" }
