crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__basic_table_with_description_snapshot@basic_table_with_description_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
/// User accounts table
model Users {
  /// Primary key
  id Int @id @default(autoincrement())
  /// User email address
  email String @unique(map: "uq_users__email")
  name String?

  @@map("users")
}
